# cookiecutter-pypackage-poetry

./: .gitignore  .travis.yml  CONTRIBUTING.rst  LICENSE  README.rst  appveyor.yml  cookiecutter.json  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: conf.py  console_script_setup.rst  prompts.rst  pypi_release_checklist.rst  travis_pypi_setup.rst  troubleshooting.rst  tutorial.rst
hooks/: post_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_name}}/: .gitignore  .travis.yml  CONTRIBUTING.rst  Makefile  README.rst  appveyor.yml  make.ps1  pyproject.toml  setup.cfg  tox.ini
{{cookiecutter.project_name}}/docs/: conf.py  installation.rst
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: __init__.py  cli.py
{{cookiecutter.project_name}}/tests/: __init__.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .gitignore  README.rst  pyproject.toml  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/docs/: conf.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  cli.py  default_config.yaml  http_handler.py  {{cookiecutter.project_slug}}.py
