[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
license = "{{ cookiecutter.open_source_license }}"

readme = "README.rst"

repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
{% if cookiecutter.document_publisher == 'ReadTheDocs' %}
documentation = "https://{{ cookiecutter.project_slug | replace("_", "-") }}.readthedocs.io"
{% else %}
documentation = "https://{{ cookiecutter.github_username }}.github.io/{{ cookiecutter.project_slug }}"
{%- endif %}
homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]

[tool.poetry.dependencies]
# List project dependencies here
{%- if cookiecutter.command_line_interface|lower == 'click' %}
click = "^8.0.1"{%- endif %}
{% if cookiecutter.use_onacol == "y" -%}
onacol = "^0.3.0"{%- endif %}
{% if cookiecutter.use_classic_aiohttp_setup == "y" -%}
aiohttp = "^3.7.4"
sockjs = "^0.11.0"{% endif %}

{% if cookiecutter.command_line_interface|lower == 'click' %}
[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.cli:main"
{% endif %}

[tool.poetry.dev-dependencies]
bump2version = "^0.5.0"
pip = "^18.1"
wheel = "^0.32.1"
watchdog = "^0.9.0"
flake8 = "^3.5.0"
tox = "^3.5.2"
coverage = {extras = ["toml"], version = "^5.5"}
Sphinx = "^4.1.1"
sphinx-rtd-theme = "^0.5.2"
twine = "^3.4.2"
{% if cookiecutter.use_pytest == "y" -%}
pytest = "^3.8.2"
pytest-runner = "^4.2"
pytest-cov = "^2.6.0"{% endif %}
setuptools = "^40.5.0"
rstcheck = "^3.3.1"
ptpython = "^2.0.4"
mypy = "^0.910"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]
source = ["{{ cookiecutter.project_slug }}"]
relative_files = true

[tool.coverage.report]
fail_under = 100
